# Tracking-and-Detection-in-Computer-Vision

./: ConfusionMatrix.ipynb  EmbeddingVisualization.ipynb  README.md
Camera Pose Estimation/auxiliary_code/: calc_force.m  excercise1.m  exercise3.m  img1Points.ply  img2Points.ply  img3Points.ply  img4Points.ply  img5Points.ply  img6Points.ply  img7Points.ply  img8Points.ply  imgTestPoints.ply  lmOptimizer.m  manualCornerDetection.m  plotImage.m  ransac.m  ransac_rahul.m  ransac_test.m
Classification with Neural Network/: Matching and Evaluation.ipynb  NeuralNet.ipynb  dataPreparation.ipynb
Classification with Neural Network/checkpoints/: intermediate_model.ckpt.index
Decision Trees/: CMakeLists.txt  data_labeler.cpp  data_labeler.hpp  dt_main.cpp  readme.md  trainingAndEvaluation.cpp  trainingAndEvaluation.hpp
HoG Descriptors/: CMakeLists.txt  HOG_main.cpp  hog_visualization.cpp  hog_visualization.hpp  readme.md
Random Forest/: CMakeLists.txt  augmentTrainingSet.cpp  data_labeler.cpp  data_labeler.hpp  newTrainingAndEvaluation.cpp  newTrainingAndEvaluation.hpp  rf_main.cpp
Sobel Filter/: CMakeLists.txt  Sobel_Filter.cpp  readme.md
checkpoints/: checkpoint
logs/run-20190206041429/: events.out.tfevents.1549426470.rahul-Inspiron-5567
logs/run-20190206042944/: events.out.tfevents.1549427389.rahul-Inspiron-5567
